Update Standford Algorithm CountInversions problem
Adjust problem for program assignment

--- a/CourseraStanfordAlgorithms/CountInversionsMergeSort/Makefile
+++ b/CourseraStanfordAlgorithms/CountInversionsMergeSort/Makefile
@@ -18,7 +18,7 @@ $(bin_dir):
 all: program testrunner
 
 run: program
-	$(bin_dir)/program/program
+	cd $(bin_dir)/program && ./program
 
 test: testrunner
 	$(bin_dir)/testrunner/testrunner
