--- a/CourseraStanfordAlgorithms/GraphMinimumCuts/CMakeLists.txt
+++ b/CourseraStanfordAlgorithms/GraphMinimumCuts/CMakeLists.txt
@@ -6,7 +6,7 @@ set (CMAKE_CXX_COMPILER "clang++")
 set (CMAKE_CXX_STANDARD 17)
 set (CMAKE_CXX_STANDARD_REQUIRED ON)
 set (CMAKE_CXX_EXTENSIONS OFF)
-set (CMAKE_BUILD_TYPE Debug)
+set (CMAKE_BUILD_TYPE RELWITHDEBINFO)
 
 add_subdirectory(library)
 add_subdirectory(program)
