--- a/CourseraStanfordAlgorithms/QuickSort/CMakeLists.txt
+++ b/CourseraStanfordAlgorithms/QuickSort/CMakeLists.txt
@@ -7,6 +7,7 @@ set (CMAKE_CXX_STANDARD 17)
 set (CMAKE_CXX_STANDARD_REQUIRED ON)
 set (CMAKE_CXX_EXTENSIONS OFF)
 set (CMAKE_BUILD_TYPE Debug)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_subdirectory(library)
 add_subdirectory(program)
